[project]
name = "JoP_GenericAppPlatform"
version = "2022.12.10"
authors = [
    {name = "Nicolas MASSIP", email="nicolas.massip@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools ~= 60.0", "future ~= 0.18.2", "psutil~=5.8.0", "PySide6~=6.4.1"]

